[package]
name = "pinto"
version = "0.6.1"
authors = ["Jacob Budin <self@jacobbudin.com>"]
description = "SQL query builder"
repository = "https://github.com/jacobbudin/pinto"
readme = "README.md"
keywords = ["sql", "query"]
license = "MIT"

[badges]
travis-ci = { repository = "jacobbudin/pinto" }

[dependencies]
